--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-#spring.datasource.url= jdbc:mysql://localhost:3306/Emp_payroll
-#spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+spring.datasource.url= jdbc:mysql://localhost:3306/emp_payroll
+spring.datasource.username=root
+spring.datasource.password=Surajmysql@90
