--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+logging.file.name=application.log
+logging.level.root=WARN
+logging.level.org.springframework.web=WARN
+logging.level.org.hibernate=ERROR
+logging.level.com.bridgelabz=DEBUG
+
+logging.pattern.console=%d{yyyy-MM-dd HH:m:ss.SSS} [%level] [%thread] [%logger{5}:%line} %msg%n
+
+environment = COMMON
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url= jdbc:mysql://localhost:3306/emp_payroll
 spring.datasource.username=root
