--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 }
 
 dependencies {
+	
+	// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter
+implementation group: 'org.springframework.boot', name: 'spring-boot-starter', version: '2.5.1'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -23,6 +26,8 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'	
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+	
+	
 }
 
 test {
