--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,6 @@ spring.profiles.active=dev
 
 environment = COMMON
 #spring.main.banner-mode=off
-spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/emp_payroll
-spring.datasource.username=root
-spring.datasource.password=Surajmysql@90
+spring.datasource.url= jdbc:mysql://localhost:3306/${payrollDB}
+spring.datasource.username=${payrollUser}
+spring.datasource.password=${payrollPassword}
