Added name and salary validation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,10 @@
 environment = DEV
 
+#spring.main.banner-mode=off
 logging.file.name=application.log
 logging.level.root=WARN
 logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=ERROR
 logging.level.com.bridgelabz=DEBUG
 
-logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss.SSS} [%level] [%thread] [%logger{5}:%line} %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:m:ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
