--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -7,7 +7,7 @@ logging.level.org.springframework.web=WARN
 logging.level.org.hibernate=ERROR
 logging.level.com.bridgelabz=DEBUG
 
-logging.pattern.file=%d{yyyy-MM-dd HH:m:ss.SSS} [%level] [%thread] [%logger{5}:%line} %msg%n
+logging.pattern.file=%d{yyyy-MM-dd HH:m:ss.SSS} [%level] [%thread] [%logger{5}:%line] %msg%n
 
 logging.pattern.console=
 spring.main.banner-mode=off
