--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.profiles.active=dev
 
 environment = COMMON
-#spring.main.banner-mode=off
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url= jdbc:mysql://localhost:3306/${payrollDB}
 spring.datasource.username=${payrollUser}
 spring.datasource.password=${payrollPassword}
