--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ implementation group: 'org.springframework.boot', name: 'spring-boot-starter', v
 	annotationProcessor 'org.projectlombok:lombok:1.18.20'	
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
 	
 	
 }
